--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,7 @@
         "react-dropdown-select": "^4.11.3",
         "react-popper": "^2.3.0",
         "react-redux": "^9.1.2",
-        "react-router-dom": "5.2.0",
+        "react-router-dom": "^6.26.2",
         "react-scripts": "5.0.1",
         "react-time-picker": "^7.0.0",
         "react-use": "^17.5.1",
