--- a/frontend/.env
+++ b/frontend/.env
@@ -2,7 +2,7 @@ PORT=3000
 MONGO_HOSTNAME=mongo
 MONGO_PORT=27017
 MONGO_DB=reactcalendar_db
-REACT_APP_API_URL=http://localhost:5001/api/v1
+REACT_APP_API_URL=http://localhost/api/v1
 CALENDARIFIC_KEY=foobar
 JWT_SECRET_KEY=mysecretkey
 JWT_EXPIRATION=3600
