added rate limiting with nginx for backend and frontend, closes #9

--- a/security/nginx.conf
+++ b/security/nginx.conf
@@ -11,11 +11,16 @@ http {
         server backend:5000;
     }
 
+    limit_req_zone $binary_remote_addr zone=api_zone:10m rate=10r/s;
+    limit_req_zone $binary_remote_addr zone=frontend_zone:10m rate=20r/s;
+
+
     server {
         listen 80;
 
         # Route all requests to /api/ to the backend
         location /api/ {
+            limit_req zone=api_zone burst=20 nodelay;
             proxy_pass http://backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -25,6 +30,7 @@ http {
 
         # Route all other requests to the frontend
         location / {
+            limit_req zone=frontend_zone burst=50 nodelay;
             proxy_pass http://frontend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
