changed username and password for MongoDB, #10

--- a/backend/.env.development
+++ b/backend/.env.development
@@ -7,5 +7,6 @@ CALENDARIFIC_KEY=foobar
 JWT_SECRET_KEY=mysecretkey
 JWT_EXPIRATION=3600
 JWT_REFRESH_EXPIRATION=86400
-MONGO_USERNAME=root
-MONGO_PASSWORD=example
+
+MONGO_USERNAME=appuser
+MONGO_PASSWORD=jaAVHhjRJdbcXPxBq7UT
