--- a/backend/package.json
+++ b/backend/package.json
@@ -5,10 +5,12 @@
     "main": "server-dev.js",
     "scripts": {
         "build": "webpack --config webpack.config.js",
-        "start": "node build/server.bundle.js"
+        "start": "node build/server.bundle.js",
+        "dev": "webpack --config webpack.config.js --watch & nodemon build/server.bundle.js"
     },
     "dependencies": {
         "bcrypt": "^5.1.1",
+        "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
         "css-loader": "^7.1.2",
         "express": "^4.18.1",
@@ -27,6 +29,7 @@
         "@babel/preset-env": "^7.25.4",
         "babel-loader": "^9.2.1",
         "dotenv-webpack": "^8.1.0",
+        "nodemon": "^3.1.7",
         "webpack": "^5.95.0",
         "webpack-cli": "^5.1.4",
         "webpack-node-externals": "^3.0.0"
