--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,8 +32,8 @@ services:
         image: mongo:latest
         volumes:
             - mongo-data:/data/db
-        expose:
-            - '27017'
+        ports:
+            - '27017:27017'
         environment:
             MONGO_INITDB_DATABASE: ${MONGO_DATABASE}
             MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
