--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "build": "webpack --config webpack.config.js",
         "start": "node build/server.bundle.js",
-        "dev": "webpack --config webpack.config.js --watch & nodemon build/server.bundle.js"
+        "dev": "concurrently \"webpack --config webpack.config.js --watch\" \"nodemon build/server.bundle.js\""
     },
     "dependencies": {
         "bcrypt": "^5.1.1",
@@ -20,7 +20,7 @@
         "html-webpack-plugin": "^5.6.0",
         "jsonwebtoken": "^9.0.2",
         "mini-css-extract-plugin": "^2.9.1",
-        "mongoose": "^8.7.0",
+        "mongoose": "^8.8.0",
         "style-loader": "^4.0.0",
         "uuid": "^10.0.0"
     },
@@ -28,6 +28,7 @@
         "@babel/core": "^7.25.2",
         "@babel/preset-env": "^7.25.4",
         "babel-loader": "^9.2.1",
+        "concurrently": "^9.1.0",
         "dotenv-webpack": "^8.1.0",
         "nodemon": "^3.1.7",
         "webpack": "^5.95.0",
