--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,21 +1,16 @@
-FROM node:18
-
-# Create app directory
-WORKDIR /usr/src/app
-
-# Copy package.json and package-lock.json first, then install dependencies
+# Build stage
+FROM node:18 AS builder
+WORKDIR /app
 COPY package*.json ./
-
-# Install dependencies, ensure bcrypt is rebuilt for the container architecture
-#RUN npm install && npm rebuild bcrypt --build-from-source
-#RUN npm install --only=dev && npm install && npm rebuild bcrypt --build-from-source
 RUN npm install
-
-# Copy the rest of the application
 COPY . .
+RUN npm run build
 
-# Expose the port
-EXPOSE 3001
-
-# Start the app
+# Production stage
+FROM node:18-alpine
+WORKDIR /app
+COPY package*.json ./
+RUN npm install --production
+COPY --from=builder /app/build ./build
+EXPOSE 5000
 CMD ["npm", "start"]
