--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "build": "webpack --config webpack.config.js",
         "start": "node build/server.bundle.js",
-        "dev": "concurrently \"webpack --config webpack.config.js --watch\" \"nodemon build/server.bundle.js\""
+        "dev": "cross-env DOTENV_CONFIG_PATH=.env.dev concurrently \"webpack --config webpack.config.js --watch\" \"nodemon build/server.bundle.js\""
     },
     "dependencies": {
         "bcryptjs": "^2.4.3",
