--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
         "babel-loader": "^9.2.1",
         "concurrently": "^9.1.0",
         "cross-env": "^7.0.3",
+        "dotenv": "^16.4.5",
         "dotenv-webpack": "^8.1.0",
         "nodemon": "^3.1.7",
         "webpack": "^5.95.0",
