--- a/modsecurity-override.conf
+++ b/modsecurity-override.conf
@@ -1,7 +1,5 @@
-# Use this file if you need to override specific parts that are not in environment variables
-
-# Allow specific calendar pattern with MongoDB ObjectId
-SecRule REQUEST_URI "@rx ^/api/v1/calendars/[0-9a-f]{24}/settings$" \
+# Allow all calendar and event patterns
+SecRule REQUEST_URI "@rx ^/api/v1/(?:calendars(?:/[0-9a-f]{24})?(?:/settings)?|events/[0-9a-f]{24})$" \
     "id:1000,\
     phase:1,\
     pass,\
@@ -9,7 +7,7 @@ SecRule REQUEST_URI "@rx ^/api/v1/calendars/[0-9a-f]{24}/settings$" \
     ctl:ruleEngine=Off"
 
 # Allow CORS only from specific origins
-SecRule REQUEST_HEADERS:Origin "^(?:https?://(?:localhost|127\.0\.0\.1)(?::\d+)?|https?://your-other-domain\.com)$" \
+SecRule REQUEST_HEADERS:Origin "^(?:https?://(?:localhost|127\.0\.0\.1)(?::\d+)?)$" \
     "id:1001,\
     phase:1,\
     pass,\
