--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
         working_dir: /app
         volumes:
             - ./frontend:/app
-        ports:
-            - '3000:3000'
+        expose:
+            - '3000'
         command: sh -c "npm install && npm start"
         depends_on:
             - backend
