--- a/nginx.conf
+++ b/nginx.conf
@@ -3,6 +3,10 @@ events {
 }
 
 http {
+    # Define rate limit zones
+    limit_req_zone $binary_remote_addr zone=api_limit:10m rate=5r/s;  # 5 requests per second for API
+    limit_req_zone $binary_remote_addr zone=frontend_limit:10m rate=10r/s;  # 10 requests per second for frontend
+    
     upstream frontend {
         server frontend:3000;
     }
@@ -13,9 +17,12 @@ http {
 
     server {
         listen 80;
-        
-        # API requests
+
+        # API requests with rate limiting
         location /api/v1/ {
+            # Apply rate limiting with bursting
+            limit_req zone=api_limit burst=10 nodelay;
+            
             proxy_pass http://backend;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -24,8 +31,11 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
 
-        # All other requests go to frontend
+        # Frontend requests with rate limiting
         location / {
+            # Apply rate limiting with bursting
+            limit_req zone=frontend_limit burst=20 nodelay;
+            
             proxy_pass http://frontend;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
